# ged_upload

GEDGame_VS2019_ESolution/projects/DXUT/Core/: CMakeLists.txt
GEDGame_VS2019_ESolution/projects/DXUT/Optional/: CMakeLists.txt
GEDGame_VS2019_ESolution/projects/DirectXTex/Texassemble/: CMakeLists.txt  Texassemble_Desktop_2019.vcxproj
GEDGame_VS2019_ESolution/projects/DirectXTex/Texconv/: CMakeLists.txt  Texconv_Desktop_2019.vcxproj
GEDGame_VS2019_ESolution/projects/DirectXTex/Texdiag/: CMakeLists.txt
GEDGame_VS2019_ESolution/projects/Effects11/: CMakeLists.txt
GEDGame_VS2019_ESolution/projects/Game/: Game.vcxproj.filters  game.cfg
GEDGame_VS2019_ESolution/projects/Game/shader/: game.fx
GEDGame_VS2019_ESolution/projects/Game/src/: ConfigParser.cpp  ConfigParser.h  Game.cpp  GameEffect.h  GameObject.h  Mesh.h  Particle.h  SpriteRenderer.cpp  Terrain.cpp
GEDGame_VS2019_ESolution/projects/ResourceGenerator/: CMakeLists.txt
GEDGame_VS2019_ESolution/projects/TerrainGenerator/: TerrainGenerator.cpp  TerrainGenerator.vcxproj
GEDGame_VS2019_ESolution_2/: CMakeLists.txt  GEDGame.sln
GEDGame_VS2019_ESolution_2/projects/DirectXTex/DDSView/: CMakeLists.txt
GEDGame_VS2019_ESolution_2/projects/DirectXTex/DirectXTex/: CMakeLists.txt
GEDGame_VS2019_ESolution_2/projects/Game/: CMakeLists.txt  Game.vcxproj  game.cfg
GEDGame_VS2019_ESolution_2/projects/Game/shader/: SpriteRenderer.fx  game.fx
GEDGame_VS2019_ESolution_2/projects/Game/src/: ConfigParser.cpp  ConfigParser.h  Game.cpp  Mesh.cpp  SpriteRenderer.h  T3d.h  Terrain.cpp  Terrain.h
GEDGame_VS2019_ESolution_2/projects/ResourceGenerator/: ResourceGenerator.vcxproj
GEDGame_VS2019_ESolution_2/projects/TerrainGenerator/: CMakeLists.txt  TerrainGenerator.vcxproj.filters
HelloWorldExampleSolution/: HelloWorld.sln
HelloWorldExampleSolution/2DArraySmoothing/: 2DArraySmoothing.cpp  2DArraySmoothing.vcxproj  2DArraySmoothing.vcxproj.filters
HelloWorldExampleSolution/ConfigurationParser/: ConfigParser.cpp  ConfigParser.h  ConfigurationParser.cpp  ConfigurationParser.vcxproj  ConfigurationParser.vcxproj.filters
HelloWorldExampleSolution/HelloWorld/: HelloWorld.cpp  HelloWorld.vcxproj
HelloWorldExampleSolution/VectorSort/: VectorSort.cpp  VectorSort.vcxproj  VectorSort.vcxproj.filters
SlidesAndAssignments/Assignment04/: Ass4_Solution.txt
SlidesAndAssignments/Assignment05/: Ass5_Solution.txt
SlidesAndAssignments/Assignment07/: Ass7_Solution.txt
Templates/GEDGame_VS2017/: GEDGame.sln
Templates/GEDGame_VS2017/projects/DXUT/Core/: DXUT_2017_Win10.vcxproj
Templates/GEDGame_VS2017/projects/DXUT/Optional/: DXUTOpt_2017_Win10.vcxproj
Templates/GEDGame_VS2017/projects/DirectXTex/DDSView/: DDSView_Desktop_2017.vcxproj
Templates/GEDGame_VS2017/projects/DirectXTex/DirectXTex/: DirectXTex_Desktop_2017.vcxproj
Templates/GEDGame_VS2017/projects/DirectXTex/Texassemble/: Texassemble_Desktop_2017.vcxproj
Templates/GEDGame_VS2017/projects/DirectXTex/Texconv/: Texconv_Desktop_2017.vcxproj
Templates/GEDGame_VS2017/projects/DirectXTex/Texdiag/: texdiag_Desktop_2017.vcxproj
Templates/GEDGame_VS2017/projects/Effects11/: Effects11_2017_Win10.vcxproj
Templates/GEDGame_VS2017/projects/Game/: Game.vcxproj
Templates/GEDGame_VS2019/: GEDGame.sln
Templates/GEDGame_VS2019/projects/DirectXTex/Texconv/: Texconv_Desktop_2019.vcxproj
Templates/GEDGame_VS2019/projects/Game/: Game.vcxproj
Tools/lib/VS2017/Win32/: GEDUtils.lib  GEDUtilsd.lib
Tools/lib/VS2017/x64/: GEDUtils.lib  GEDUtilsd.lib
Tools/lib/VS2019/Win32/: GEDUtils.lib  GEDUtilsd.lib
Tools/lib/VS2019/x64/: GEDUtils.lib  GEDUtilsd.lib
art/02-Enemies/amy_spaceship/: Thumbs.db
art/02-Enemies/juf_spaceship/: Thumbs.db
art/02-Enemies/lup_final/: Thumbs.db
art/02-Enemies/man_spaceship/: Thumbs.db  man_spaceship.mtl
art/02-Enemies/man_spaceship/renderings_screenshots/: Thumbs.db
art/02-Enemies/transporter/: Thumbs.db
